overlapping navbar fixed & adding menu transition

--- a/style.css
+++ b/style.css
@@ -10,11 +10,18 @@ body {
 		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 nav {
-	width: 100%;
+	width: 90%;
+	margin: 0 auto;
 	position: fixed;
-	z-index: 999;
+	top: 0;
+	left: 0;
+	right: 0;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	z-index: 99;
 	background: rgba(0, 0, 0, 0.2);
 }
 nav .nav-wrap {
@@ -218,7 +225,13 @@ footer p {
 }
 @media screen and (max-width: 1000px) {
 	nav {
-		overflow: visible;
+		overflow-y: visible;
+		border-radius: 0;
+		background: rgba(0, 0, 0, 1);
+		-webkit-border-radius: 0;
+		-moz-border-radius: 0;
+		-ms-border-radius: 0;
+		-o-border-radius: 0;
 	}
 	.content-wrap p {
 		width: 100%;
@@ -229,21 +242,28 @@ footer p {
 	}
 
 	#toggle:checked ~ .nav-menu ul {
-		display: flex;
+		top: 50px;
+		opacity: 1;
 	}
 
 	nav .nav-wrap .nav-menu ul {
-		display: none;
+		display: flex;
+		opacity: 0;
 		flex-direction: column;
 		position: absolute;
-		top: 50px;
+		top: -100px;
 		left: 0;
 		z-index: -1;
 		height: 100vh;
-		width: 100vw;
-		background: rgba(0, 0, 0, 0.5);
+		width: 90vw;
+		background: rgba(0, 0, 0, 0.9);
 		justify-content: start;
 		padding: 0;
+		transition: 0.5s;
+		-webkit-transition: 0.5s;
+		-moz-transition: 0.5s;
+		-ms-transition: 0.5s;
+		-o-transition: 0.5s;
 	}
 	nav .nav-wrap .nav-menu ul li {
 		text-align: center;
@@ -312,6 +332,10 @@ footer p {
 @media screen and (max-width: 400px) {
 	nav {
 		background-color: #121212;
+		width: 80%;
+	}
+	nav .nav-wrap .nav-menu ul {
+		width: 80vw;
 	}
 	.center-small {
 		width: 100%;
